# jereeeme

./: Cargo.toml  Dockerfile  README.md
articles/: 20210712-Blog-Juan.md  20210713-Blog-Two.md  20210715-Only-the-beginning.md  20210723-Smooth-ROPerator.md  20220526-Better-Axumbody.md
assets/: highlight.min.js  styles.css
fuzz/: Cargo.toml
fuzz/coverage/fuzz_target_1/raw/: default-3a52ce780950d4d969792a2559cd519d7ee8c727.profraw
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: articles.rs  handler.rs  main.rs  routes.rs
static/: about.md  contact.md  home.md  menu.md
templates/: footer.html  header.html
tests/: test_file.md
