[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blog"
path = "./src/main.rs"

[dependencies]
actix-files = "0.5.0"
actix-web = "3"
chrono = "0.4.19"
comrak = "0.10.1"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"
