[package]
name = "blog"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blog"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
axum-extra = { version = "0.3.3", features = ["spa"] }
chrono = "0.4.19"
comrak = "0.12.1"
tokio = { version = "1.18.2", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-default-headers = "0.1.1"
tower-http = { version = "0.3.3", features = ["set-header"] }
tracing = "0.1.34"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.11"
